# snake-2.0

./: CMakeLists.txt  README.md
include/: drawing.h  game.h  input.h
src/: drawing.c  game.c  input.c  main.c
